--- a/Styles/MasterStyles.xaml
+++ b/Styles/MasterStyles.xaml
@@ -1,11 +1,19 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+    
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Button.xaml" />
         <ResourceDictionary Source="Header.xaml" />
         <ResourceDictionary Source="CheckBox.xaml" />
         <ResourceDictionary Source="TextBox.xaml" />
         <ResourceDictionary Source="ComboBox.xaml" />
+        <ResourceDictionary Source="STComboBox.xaml" />
+        <ResourceDictionary Source="STHeader.xaml" />
+        <ResourceDictionary Source="STButtons.xaml" />
+        <ResourceDictionary Source="STColor.xaml" />
+        <ResourceDictionary Source="ST_TextBox.xaml" />
+        <ResourceDictionary Source="STDataGrid.xaml" />
+        
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
