--- a/StructLink_X.0/views/MainWindow.xaml
+++ b/StructLink_X.0/views/MainWindow.xaml
@@ -1,15 +1,15 @@
-﻿<Window x:Class="StructLink_X._0.Views.MainWindow"  
+﻿<Window x:Class="StructLink_X.Views.MainWindow"  
        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"  
        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"  
        xmlns:hx="http://helix-toolkit.org/wpf"  
-       xmlns:viewmodels="clr-namespace:StructLink_X._0.ViewModels"  
-       xmlns:local="clr-namespace:StructLink_X._0.converters"  
+       xmlns:viewmodels="clr-namespace:StructLink_X.ViewModels"  
+       xmlns:local="clr-namespace:StructLink_X.converters"  
        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"  
        Title="StructLink-X - Rebar &amp; Concrete Analysis Suite"  
+       d:DataContext="{d:DesignInstance Type=viewmodels:Main, IsDesignTimeCreatable=False}"
        Width="1200" Height="750"  
        MinWidth="1200" MinHeight="800"  
        Background="#F8FAFC"  
-        
        WindowStartupLocation="CenterScreen">
     
     <Window.Resources>
