--- a/StructLink_X.0/views/RebarEditor.xaml
+++ b/StructLink_X.0/views/RebarEditor.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="StructLink_X._0.Views.RebarEditor"
+﻿<Window x:Class="StructLink_X.Views.RebarEditor"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:StructLink_X._0.converters"
+        xmlns:local="clr-namespace:StructLink_X.converters"
         Title="StructLink-X - Edit Rebar Data"
         Width="1000" Height="600"
         MinWidth="800" MinHeight="500"
