--- a/StructLink_X/Views/RebarEditor.xaml
+++ b/StructLink_X/Views/RebarEditor.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="StructLink_X.Views.RebarEditor"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:StructLink_X.converters"
+        xmlns:local="clr-namespace:StructLink_X.Views"
+        xmlns:converters="clr-namespace:StructLink_X.Converters"  
         Title="StructLink-X - Edit Rebar Data"
         Width="1000" Height="600"
         MinWidth="800" MinHeight="500"
@@ -13,9 +14,9 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/Styles;component/MasterStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <local:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-            <local:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
-            <local:ViewModeToVisibilityConverter x:Key="ViewModeToVisibilityConverter" />
+            <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+            <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
+            <converters:ViewModeToVisibilityConverter x:Key="ViewModeToVisibilityConverter" />
         </ResourceDictionary>
     </Window.Resources>
 
