--- a/StructLink_X/Views/MainWindow.xaml
+++ b/StructLink_X/Views/MainWindow.xaml
@@ -5,6 +5,7 @@
        xmlns:viewmodels="clr-namespace:StructLink_X.ViewModels"  
        xmlns:local="clr-namespace:StructLink_X.Views"  
        xmlns:converters="clr-namespace:StructLink_X.Converters"  
+       d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel, IsDesignTimeCreatable=False}"
        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"  
        Title="StructLink-X - Rebar &amp; Concrete Analysis Suite"  
        Width="1200" Height="750"  
