--- a/Styles/STComboBox.xaml
+++ b/Styles/STComboBox.xaml
@@ -4,8 +4,8 @@
     <Style x:Key="ModernComboBox" TargetType="ComboBox">
         <Setter Property="Padding" Value="12,10"/>
         <Setter Property="BorderThickness" Value="2"/>
-        <Setter Property="BorderBrush" Value="{StaticResource BorderGray}"/>
-        <Setter Property="Background" Value="White"/>
+        <Setter Property="BorderBrush" Value="#E2E8F0"/>
+        <Setter Property="Background" Value="#FFFFFF"/>
         <Setter Property="FontSize" Value="13"/>
     </Style>
 </ResourceDictionary>
