--- a/Styles/STDataGrid.xaml
+++ b/Styles/STDataGrid.xaml
@@ -2,15 +2,14 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!-- DataGrid Style -->
     <Style x:Key="ModernDataGrid" TargetType="DataGrid">
-        <Setter Property="Background" Value="White"/>
-        <Setter Property="BorderBrush" Value="{StaticResource BorderGray}"/>
+        <Setter Property="Background" Value="#FFFFFF"/>
+        <Setter Property="BorderBrush" Value="#E2E8F0"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="GridLinesVisibility" Value="Horizontal"/>
-        <Setter Property="HorizontalGridLinesBrush" Value="{StaticResource BorderGray}"/>
+        <Setter Property="HorizontalGridLinesBrush" Value="#E2E8F0"/>
         <Setter Property="AlternatingRowBackground" Value="#F8FAFC"/>
         <Setter Property="HeadersVisibility" Value="Column"/>
         <Setter Property="FontSize" Value="12"/>
         <Setter Property="RowHeight" Value="32"/>
     </Style>
-
 </ResourceDictionary>
